--- a/524SX-557SX/index.html
+++ b/524SX-557SX/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Obama´s Twitter Inauguration</title>
+    <title>GTM-trailTracker - OR Cascade</title>
     <link rel="stylesheet" href="http://api.tiles.mapbox.com/mapbox.js/v0.6.3/mapbox.css" type="text/css" />
     <link rel="stylesheet" href="fonts/fonts.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
@@ -18,7 +18,7 @@
 <body>
 
 	<div id="header">
-        <h1>Obama´s Inaguration on Twitter</h1>
+        <h1>GTM-trailTracker - OR Cascade</h1>
     </div>
     <div id="content">
         <table id="counter">
