--- a/524SX-557SX/index.html
+++ b/524SX-557SX/index.html
@@ -31,19 +31,19 @@
     <div id="content">
         <table id="counter">
         	<tr>
-        		<th class='first'>All Tweets</th>
-        		<th class='second'>Second Tweets</th>
+        		<th class='first'>Total Trails</th>
+        		<th class='second'>Completed to Date</th>
         	</tr>
            	<tr>
            	    <td class='first'>--</td>
         		<td class='second'>--</td>
         	</tr>
         </table>
-        <a href="#" id="stop">Pause</a>
+        <a href="#" id="stop">Add data</a>
         <div id="about">
-            <h2>Follow the Inagurations Tweets</h2>
-            <p>This maps shows live Tweets from around the Inaguration site. We map all Tweets in Green and Tweets with the word "Obama" in Blue. </p>
-              <p>Forked from <a href="http://github.com/brunosan/Twitter-MapBox">this Mapbox repo</a>.</p>
+            <h2>Bull of the Woods / Mount Jefferson trailTracker</h2>
+            <p> This map shows completed trails in Green, and trails still needed in Red </p>
+              <p>Some text <a href="http://github.com/brunosan/Twitter-MapBox">Green Trails Maps</a>.</p>
         	
         </div>
     </div>
