--- a/524SX-557SX/index.html
+++ b/524SX-557SX/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="fonts/fonts.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/mapbox.share.css" type="text/css" />
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <!-- <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" /> -->
 
 
     <script src="ext/jquery.min.js"></script>
